--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
+    "bootstrap": "^4.4.1",
     "express": "^4.17.1",
     "path": "^0.12.7",
     "rxjs": "~6.5.4",
@@ -37,6 +38,7 @@
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
+    "bootstrap": "^4.4.1",
     "codelyzer": "^5.1.2",
     "enhanced-resolve": "^3.4.1",
     "jasmine-core": "~3.5.0",
