--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~9.1.0",
     "bootstrap": "^4.4.1",
     "express": "^4.17.1",
+    "ngx-bootstrap": "^5.6.1",
     "path": "^0.12.7",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
