--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
     "bootstrap": "^4.4.1",
+    "bootstrap-material-design": "^4.1.1",
     "express": "^4.17.1",
     "ngx-bootstrap": "^5.6.1",
     "path": "^0.12.7",
